# django-scaffold

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
apps/account/: models.py  throttles.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/account/serializers/: login.py  register.py  sms.py
apps/account/tasks/: send_mail.py
apps/im/: apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
apps/im/management/commands/: cleanup_old_messages.py
apps/im/migrations/: 0001_initial.py
config/: base.py  development.py  production.py
core/: authentication.py  celery.py  models.py  response.py  stat_code.py
core/middleware/: exceptions.py  jwt_auth.py
libs/sms/: backends.py  enums.py  exceptions.py  utils.py
scaffold/: asgi.py  urls.py  wsgi.py
templates/email/: welcome.html
utils/: environment.py  jwt_handler.py
